# multiversx-ethereum-ride-bridge

./: .gitignore  CHANGES  CHANGES.md  README.md  creation_steps.txt  tech_docs.md
bridge/: .gitignore  (+3 more)
rs/: .gitignore  Cargo.toml  README.md  build-wasm-release.sh  build-wasm.sh
rs/bridged-tokens-wrapper/: Cargo.toml
rs/bridged-tokens-wrapper/meta/: Cargo.toml
rs/bridged-tokens-wrapper/src/: lib.rs
rs/bridged-tokens-wrapper/wasm/: Cargo.toml
rs/common/eth-address/: Cargo.toml
rs/common/fee-estimator-module/: Cargo.toml
rs/common/max-bridged-amount-module/: Cargo.toml
rs/common/token-module/: Cargo.toml
rs/common/transaction/: Cargo.toml
rs/common/tx-batch-module/: Cargo.toml
rs/deposit-wrapper/: Cargo.toml
rs/deposit-wrapper/meta/: Cargo.toml
rs/deposit-wrapper/output/: deposit-wrapper.abi.json  deposit-wrapper.wasm
rs/deposit-wrapper/src/: lib.rs
rs/deposit-wrapper/wasm/: Cargo.toml
rs/esdt-safe/: Cargo.toml
rs/esdt-safe/interaction/: snippets.sh
rs/esdt-safe/meta/: Cargo.toml
rs/esdt-safe/src/: lib.rs
rs/esdt-safe/wasm/: Cargo.toml
rs/multi-transfer-esdt/: Cargo.toml
rs/multi-transfer-esdt/interaction/: snippets.sh
rs/multi-transfer-esdt/meta/: Cargo.toml
rs/multi-transfer-esdt/src/: lib.rs
rs/multi-transfer-esdt/wasm/: Cargo.toml
rs/multisig/: Cargo.toml
rs/multisig/interaction/: README.md  script.sh
rs/multisig/meta/: Cargo.toml
rs/multisig/src/: lib.rs  setup.rs  util.rs
rs/multisig/wasm/: Cargo.toml
rs/price-aggregator/output/: price-aggregator.abi.json  price-aggregator.wasm
rs/price-aggregator/src/: lib.rs
rs/price-aggregator/wasm/: Cargo.toml
rs/wesdt-swap/: Cargo.toml
rs/wesdt-swap/meta/: Cargo.toml
rs/wesdt-swap/output/: wesdt-swap.abi.json  wesdt-swap.wasm
rs/wesdt-swap/src/: lib.rs
rs/wesdt-swap/wasm/: Cargo.toml
(+78 files in other folders)
