[workspace]
members = [
  "esdt-safe",
  "esdt-safe/meta",
  "multi-transfer-esdt",
  "multi-transfer-esdt/meta",
  "multisig",
  "multisig/meta",
  "bridged-tokens-wrapper",
  "bridged-tokens-wrapper/meta",
  "wesdt-swap",
  "wesdt-swap/meta",
  "price-aggregator",
  "price-aggregator/meta",
  "deposit-wrapper",
  "deposit-wrapper/meta",
]
