[package]
name = "deposit-wrapper"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.transaction]
path = "../common/transaction"

[dependencies.eth-address]
path = "../common/eth-address"

[dependencies.fee-estimator-module]
path = "../common/fee-estimator-module"

[dependencies.token-module]
path = "../common/token-module"

[dependencies.tx-batch-module]
path = "../common/tx-batch-module"

[dependencies.max-bridged-amount-module]
path = "../common/max-bridged-amount-module"

[dependencies.bridged-tokens-wrapper]
path = "../bridged-tokens-wrapper"

[dependencies.wesdt-swap]
path = "../wesdt-swap"

[dependencies.esdt-safe]
path = "../esdt-safe"

[dependencies.elrond-wasm]
version = "0.32.0"

[dependencies.elrond-wasm-modules]
version = "0.32.0"

[dev-dependencies.elrond-wasm-debug]
version = "0.32.0"
