[package]
name = "multiversx-wesdt-swap-sc-meta"
version = "0.0.0"
authors = [ "Dorin Iancu <dorin.iancu@multiversx.com>",]
edition = "2021"
publish = false

[dev-dependencies]

[dependencies.multiversx-wesdt-swap-sc]
path = ".."

[dependencies.multiversx-sc]
version = "0.41.2"
path = "../../../../framework/base"

[dependencies.multiversx-sc-meta]
version = "0.41.2"
path = "../../../../framework/meta"
